Add detailed markdown explanation for model training techniques in the notebook

--- a/notebooks/model_training.ipynb
+++ b/notebooks/model_training.ipynb
@@ -68,7 +68,22 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "To ensure that the model generalizes well to unseen data, the dataset was split into training and test sets. Typically, the split is done in either a 70:30 or 80:20 ratio.\n",
+    "\n",
+    "Train Set: Used to train the model.\n",
+    "Test Set: Used to evaluate model performance on unseen data.\n",
+    "Modeling Techniques\n",
+    "Model Training Techniques\n",
+    "\n",
+    "The following machine learning models were trained using the training data:\n",
+    "\n",
+    "Linear Regression: A baseline regression model that assumes a linear relationship between the features and the target.\n",
+    "Decision Tree: A non-linear model that learns simple decision rules inferred from the data.\n",
+    "Random Forest: An ensemble model that combines multiple decision trees to improve prediction accuracy and generalization.\n",
+    "XGBoost: A powerful boosting algorithm that iteratively improves model performance by focusing on difficult-to-predict samples.\n",
+    "Linear Regression:"
+   ]
   }
  ],
  "metadata": {
