--- a/notebooks/model_training.ipynb
+++ b/notebooks/model_training.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,8 @@
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
-    "\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.linear_model import LinearRegression\n",
     "\n",
     "from sklearn.metrics import mean_squared_error, r2_score\n",
     "import os, sys\n",
@@ -83,6 +84,24 @@
     "Random Forest: An ensemble model that combines multiple decision trees to improve prediction accuracy and generalization.\n",
     "XGBoost: A powerful boosting algorithm that iteratively improves model performance by focusing on difficult-to-predict samples.\n",
     "Linear Regression:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Initialize and train the model\n",
+    "lr_model = LinearRegression()\n",
+    "lr_model.fit(X_train, y_train)\n",
+    "\n",
+    "# Make predictions\n",
+    "y_pred_lr = lr_model.predict(X_test)\n",
+    "\n",
+    "# Evaluate the model\n",
+    "mse_lr = mean_squared_error(y_test, y_pred_lr)\n",
+    "r2_lr = r2_score(y_test, y_pred_lr)"
    ]
   }
  ],
