--- a/notebooks/model_training.ipynb
+++ b/notebooks/model_training.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,8 @@
     "import seaborn as sns\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.linear_model import LinearRegression\n",
-    "\n",
+    "from sklearn.metrics import mean_squared_error, r2_score\n",
+    "from sklearn.tree import DecisionTreeRegressor\n",
     "from sklearn.metrics import mean_squared_error, r2_score\n",
     "import os, sys\n",
     "# Add the 'scripts' directory to the Python path for module imports\n",
@@ -102,6 +103,24 @@
     "# Evaluate the model\n",
     "mse_lr = mean_squared_error(y_test, y_pred_lr)\n",
     "r2_lr = r2_score(y_test, y_pred_lr)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Initialize and train the model\n",
+    "dt_model = DecisionTreeRegressor(random_state=42)\n",
+    "dt_model.fit(X_train, y_train)\n",
+    "\n",
+    "# Make predictions\n",
+    "y_pred_dt = dt_model.predict(X_test)\n",
+    "\n",
+    "# Evaluate the model\n",
+    "mse_dt = mean_squared_error(y_test, y_pred_dt)\n",
+    "r2_dt = r2_score(y_test, y_pred_dt)"
    ]
   }
  ],
