--- a/notebooks/model_training.ipynb
+++ b/notebooks/model_training.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
     "from sklearn.linear_model import LinearRegression\n",
     "from sklearn.metrics import mean_squared_error, r2_score\n",
     "from sklearn.tree import DecisionTreeRegressor\n",
-    "from sklearn.metrics import mean_squared_error, r2_score\n",
+    "from sklearn.ensemble import RandomForestRegressor\n",
     "import os, sys\n",
     "# Add the 'scripts' directory to the Python path for module imports\n",
     "sys.path.append(os.path.abspath(os.path.join('..', 'scripts')))\n",
@@ -121,6 +121,31 @@
     "# Evaluate the model\n",
     "mse_dt = mean_squared_error(y_test, y_pred_dt)\n",
     "r2_dt = r2_score(y_test, y_pred_dt)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Random Forests"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Initialize and train the model\n",
+    "rf_model = RandomForestRegressor(n_estimators=100, random_state=42)\n",
+    "rf_model.fit(X_train, y_train)\n",
+    "\n",
+    "# Make predictions\n",
+    "y_pred_rf = rf_model.predict(X_test)\n",
+    "\n",
+    "# Evaluate the model\n",
+    "mse_rf = mean_squared_error(y_test, y_pred_rf)\n",
+    "r2_rf = r2_score(y_test, y_pred_rf)"
    ]
   }
  ],
