Add XGBoost model training and evaluation to the notebook

--- a/notebooks/model_training.ipynb
+++ b/notebooks/model_training.ipynb
@@ -147,6 +147,32 @@
     "mse_rf = mean_squared_error(y_test, y_pred_rf)\n",
     "r2_rf = r2_score(y_test, y_pred_rf)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "XGBoost"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import xgboost as xgb\n",
+    "# Initialize and train the model\n",
+    "xgb_model = xgb.XGBRegressor(objective='reg:squarederror', n_estimators=100, random_state=42)\n",
+    "xgb_model.fit(X_train, y_train)\n",
+    "\n",
+    "# Make predictions\n",
+    "y_pred_xgb = xgb_model.predict(X_test)\n",
+    "\n",
+    "# Evaluate the model\n",
+    "mse_xgb = mean_squared_error(y_test, y_pred_xgb)\n",
+    "r2_xgb = r2_score(y_test, y_pred_xgb)"
+   ]
   }
  ],
  "metadata": {
