--- a/notebooks/model_training.ipynb
+++ b/notebooks/model_training.ipynb
@@ -173,6 +173,33 @@
     "mse_xgb = mean_squared_error(y_test, y_pred_xgb)\n",
     "r2_xgb = r2_score(y_test, y_pred_xgb)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Model Evaluation Metrics\n",
+    "\n",
+    "Each model was evaluated on the test set using several metrics:\n",
+    "\n",
+    "Mean Squared Error (MSE): Measures the average squared difference between the predicted and actual values.\n",
+    "R-Squared (R²): A statistical measure that explains the proportion of variance in the target variable explained by the model."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Evaluation metrics\n",
+    "metrics = {\n",
+    "    'Linear Regression': {'MSE': mse_lr, 'R2': r2_lr},\n",
+    "    'Decision Tree': {'MSE': mse_dt, 'R2': r2_dt},\n",
+    "    'Random Forest': {'MSE': mse_rf, 'R2': r2_rf},\n",
+    "    'XGBoost': {'MSE': mse_xgb, 'R2': r2_xgb}\n",
+    "}"
+   ]
   }
  ],
  "metadata": {
