Add model evaluation results for Linear Regression, Decision Tree, Random Forest, and XGBoost

--- a/notebooks/model_training.ipynb
+++ b/notebooks/model_training.ipynb
@@ -200,6 +200,78 @@
     "    'XGBoost': {'MSE': mse_xgb, 'R2': r2_xgb}\n",
     "}"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>MSE</th>\n",
+       "      <th>R2</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Linear Regression</th>\n",
+       "      <td>280.714737</td>\n",
+       "      <td>0.417132</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Decision Tree</th>\n",
+       "      <td>251.759223</td>\n",
+       "      <td>0.477254</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Random Forest</th>\n",
+       "      <td>251.732004</td>\n",
+       "      <td>0.477311</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>XGBoost</th>\n",
+       "      <td>262.501044</td>\n",
+       "      <td>0.454950</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                          MSE        R2\n",
+       "Linear Regression  280.714737  0.417132\n",
+       "Decision Tree      251.759223  0.477254\n",
+       "Random Forest      251.732004  0.477311\n",
+       "XGBoost            262.501044  0.454950"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pd.DataFrame(metrics).T"
+   ]
   }
  ],
  "metadata": {
