Add markdown cell for model comparison and introduce visual comparison of predicted vs. actual values

--- a/notebooks/model_training.ipynb
+++ b/notebooks/model_training.ipynb
@@ -272,6 +272,24 @@
    "source": [
     "pd.DataFrame(metrics).T"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "From the table, we see that Random Forest and Decision Tree models have similar performance and outperform the linear model.\n",
+    "\n",
+    "Model Comparison Using Graphs\n",
+    "\n",
+    "To compare the models visually, we can plot the predicted vs. actual values for each model."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
