Add LIME explainer for model predictions in training notebook

--- a/notebooks/model_training.ipynb
+++ b/notebooks/model_training.ipynb
@@ -327,6 +327,39 @@
     "\n",
     "LIME (Local Interpretable Model-agnostic Explanations): A method that explains individual predictions locally."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'lime'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[19], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mlime\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mlime_tabular\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m LimeTabularExplainer\n\u001b[1;32m      3\u001b[0m \u001b[38;5;66;03m# Initialize LIME explainer\u001b[39;00m\n\u001b[1;32m      4\u001b[0m lime_explainer \u001b[38;5;241m=\u001b[39m LimeTabularExplainer(\n\u001b[1;32m      5\u001b[0m     training_data\u001b[38;5;241m=\u001b[39mX_train\u001b[38;5;241m.\u001b[39mvalues,\n\u001b[1;32m      6\u001b[0m     feature_names\u001b[38;5;241m=\u001b[39mX_train\u001b[38;5;241m.\u001b[39mcolumns,\n\u001b[1;32m      7\u001b[0m     mode\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mregression\u001b[39m\u001b[38;5;124m'\u001b[39m\n\u001b[1;32m      8\u001b[0m )\n",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'lime'"
+     ]
+    }
+   ],
+   "source": [
+    "from lime.lime_tabular import LimeTabularExplainer\n",
+    "\n",
+    "# Initialize LIME explainer\n",
+    "lime_explainer = LimeTabularExplainer(\n",
+    "    training_data=X_train.values,\n",
+    "    feature_names=X_train.columns,\n",
+    "    mode='regression'\n",
+    ")\n",
+    "\n",
+    "# Explain predictions for a sample instance\n",
+    "i = 0  # index of the instance to explain\n",
+    "exp = lime_explainer.explain_instance(X_test.iloc[i].values, xgb_model.predict)\n",
+    "exp.show_in_notebook(show_table=True, show_all=False)"
+   ]
   }
  ],
  "metadata": {
